--- a/HumbleBragWOS/app/build.gradle
+++ b/HumbleBragWOS/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.+'
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
