--- a/HumbleBragWOS/app/src/main/AndroidManifest.xml
+++ b/HumbleBragWOS/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".TwitterApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_hb"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
